phone-number-with-country-code

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,10 @@
 body {
     font-family: "Montserrat", sans-serif;
 }
+.PhoneInputCountrySelect {
+ background: #010520ef !important;    /* light gray */
+    border-color: var(--color-foreground) !important; /* dark gray */
+}
 
 
 .loader {
